fix break words too long

--- a/src/components/ui/form-modal-group/style.scss
+++ b/src/components/ui/form-modal-group/style.scss
@@ -17,6 +17,7 @@
 
         &--text {
             grid-column: span auto;
+            overflow-wrap: break-word;
             max-width: 460px;
             word-break: normal;
             color: #000000;
